# SR_GPP

./: CMakeLists.txt  Makefile  main.cpp  sr_gpp.cpp
dlib-19-17/dlib/: CMakeLists.txt
dlib-19-17/dlib/all/: CMakeLists.txt
src/: CMakeLists.txt  alglibinternal.cpp  ap.cpp  general_img.cpp  general_img.h  run_gpp.cpp  run_gpp.h  specialfunctions.cpp  sr_gpp.cpp  sr_gpp.h
